--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".SignupActivity" />
-        <activity android:name=".TokenActivity"></activity>
+        <activity android:name=".TokenActivity" />
+        <activity android:name=".ShowQueueNoActivity"></activity>
     </application>
 
 </manifest>
