--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,4 +28,7 @@ dependencies {
     compile 'com.microsoft.azure:azure-mobile-android:3.1.0'
     compile 'com.squareup.retrofit2:retrofit:2.1.0'
     compile 'com.squareup.retrofit2:converter-gson:2.1.0'
+    compile 'com.github.glomadrian:CodeInput:1.1@aar'
+    compile 'com.github.medyo:fancybuttons:1.8.3'
+    compile 'com.victor:lib:1.0.4'
 }
