--- a/build.gradle
+++ b/build.gradle
@@ -2,10 +2,13 @@
 
 buildscript {
     repositories {
+        maven {
+            url "http://dl.bintray.com/glomadrian/maven"
+        }
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.2.2'
+        classpath 'com.android.tools.build:gradle:2.2.3'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -15,6 +18,9 @@ buildscript {
 allprojects {
     repositories {
         jcenter()
+        maven {
+            url "http://dl.bintray.com/glomadrian/maven"
+        }
     }
 }
 
