--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,22 +12,23 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:supportsRtl="true"
-        android:theme="@style/Theme.Design.Light.NoActionBar">
-        <activity android:name=".MainActivity">
+        android:theme="@style/AppTheme"
+        android:supportsRtl="true">
+        <activity android:name=".StartingActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <service android:name="com.kontakt.sdk.android.ble.service.ProximityService" android:exported="false"/>
         <service android:name=".BeaconFinder.BeaconFinderService"/>
-        <activity android:name=".StartingActivity"/>
-        <activity android:name=".SignupActivity" />
-        <activity android:name=".TokenActivity" />
+        <activity android:name=".MainActivity"
+            android:theme="@style/Theme.Design.Light.NoActionBar"/>
+        <activity android:name=".SignupActivity"
+            android:theme="@style/MyCustomTheme"
+            android:parentActivityName=".MainActivity"/>
         <activity android:name=".ShowQueueNoActivity"></activity>
     </application>
 </manifest>
