ShowQueueNo Replaced with ViewStatus Activity. SMS service put on hold for testing.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,7 +33,7 @@
             android:theme="@style/MyCustomTheme"
             android:label="Get Token"
             android:parentActivityName=".MainActivity"/>
-        <activity android:name=".ShowQueueNoActivity"
+        <activity android:name=".ViewStatusActivity"
             android:theme="@style/MyCustomTheme"
             android:label="Queue no."
             android:parentActivityName=".MainActivity" />
