--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,4 +31,6 @@ dependencies {
     compile 'com.github.glomadrian:CodeInput:1.1@aar'
     compile 'com.github.medyo:fancybuttons:1.8.3'
     compile 'com.victor:lib:1.0.4'
+    compile 'com.google.android.gms:play-services-location:10.2.0'
+
 }
