--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,6 +10,8 @@ android {
         targetSdkVersion 25
         versionCode 1
         versionName "1.0"
+        multiDexEnabled true
+
     }
     buildTypes {
         release {
@@ -17,14 +19,19 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
+    dexOptions {
+        javaMaxHeapSize "4g"
+    }
+
 }
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:25.0.1'
+
+    compile 'com.android.support:appcompat-v7:25.2.0'
     compile 'com.kontaktio:sdk:3.2.0'
-    compile 'com.android.support:design:25.0.1'
+    compile 'com.android.support:design:25.2.0'
     compile 'com.microsoft.azure:azure-mobile-android:3.1.0'
     compile 'com.squareup.retrofit2:retrofit:2.1.0'
     compile 'com.squareup.retrofit2:converter-gson:2.1.0'
@@ -32,5 +39,6 @@ dependencies {
     compile 'com.github.medyo:fancybuttons:1.8.3'
     compile 'com.victor:lib:1.0.4'
     compile 'com.google.android.gms:play-services-location:10.2.0'
-
+    compile 'com.google.android.gms:play-services:10.2.0'
+    testCompile 'junit:junit:4.12'
 }
