--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,8 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 25
     buildToolsVersion "24.0.1"
+    useLibrary 'org.apache.http.legacy'
+
 
     defaultConfig {
         applicationId "com.sdsmdg.skipthequeue"
