feat: Adds recyclerview and starting activity now fetches atm list

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -75,7 +75,7 @@
         <activity
             android:name=".MapsActivity"
             android:label="@string/title_activity_maps"></activity>
-        <activity android:name=".otp.Atm_details"></activity>
+        <activity android:name=".Atm_details"></activity>
     </application>
 
 </manifest>
