--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -53,7 +53,9 @@
             </intent-filter>
         </receiver>
 
-        <activity android:name=".StartingActivity">
+        <activity android:name=".StartingActivity"
+            android:label="Nearby Atms"
+            android:theme="@style/MyCustomTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -75,7 +77,6 @@
         <activity
             android:name=".MapsActivity"
             android:label="@string/title_activity_maps"></activity>
-        <activity android:name=".Atm_details"></activity>
     </application>
 
 </manifest>
