--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,9 @@
         android:label="@string/app_name"
         android:largeHeap="true"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+
+        >
         <activity
             android:name=".MainActivity"
             android:theme="@style/Theme.Design.Light.NoActionBar" />
@@ -29,14 +31,17 @@
         <service android:name=".BeaconFinder.BeaconFinderService" />
 
         <activity
+            android:screenOrientation="portrait"
             android:name=".BeaconScannerActivity"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
         <activity
+            android:screenOrientation="portrait"
             android:name=".SignupActivity"
             android:label="Get Token"
             android:parentActivityName=".MainActivity"
             android:theme="@style/MyCustomTheme" />
         <activity
+            android:screenOrientation="portrait"
             android:name=".ViewStatusActivity"
             android:label="Queue no."
             android:parentActivityName=".MainActivity"
@@ -54,6 +59,7 @@
         </receiver>
 
         <activity android:name=".StartingActivity"
+            android:screenOrientation="portrait"
             android:label="Nearby Atms"
             android:theme="@style/MyCustomTheme">
             <intent-filter>
@@ -75,8 +81,9 @@
             android:value="@string/google_maps_key" />
 
         <activity
+            android:screenOrientation="portrait"
             android:name=".MapsActivity"
-            android:label="@string/title_activity_maps"></activity>
+            android:label="@string/title_activity_maps"/>
     </application>
 
 </manifest>
