--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,4 +44,6 @@ dependencies {
     compile 'com.google.android.gms:play-services:10.2.0'
     compile 'com.android.support:recyclerview-v7:25.2.0'
     testCompile 'junit:junit:4.12'
+    compile 'com.azoft.carousellayoutmanager:carousel:1.2.1'
+    compile 'com.android.support:cardview-v7:25.2.0'
 }
