--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,12 +18,11 @@
         android:label="@string/app_name"
         android:largeHeap="true"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme"
+        android:theme="@style/AppTheme">
 
-        >
         <activity
             android:name=".MainActivity"
-            android:theme="@style/MyCustomTheme.NoActionBar" />
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
 
         <service
             android:name="com.kontakt.sdk.android.ble.service.ProximityService"
@@ -62,9 +61,10 @@
             android:screenOrientation="portrait"
             android:theme="@style/MyCustomTheme.NoActionBar">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
+                <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
+
             </intent-filter>
         </activity>
         <!--
@@ -83,6 +83,7 @@
             android:screenOrientation="portrait"
             android:name=".MapsActivity"
             android:label="@string/title_activity_maps"/>
+
     </application>
 
 </manifest>
