feat: Adds SkipTheQueue to movie theatres

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,6 @@
         android:largeHeap="true"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
         <activity
             android:name=".MainActivity"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
@@ -30,20 +29,20 @@
         <service android:name=".BeaconFinder.BeaconFinderService" />
 
         <activity
-            android:screenOrientation="portrait"
             android:name=".BeaconScannerActivity"
+            android:screenOrientation="portrait"
             android:theme="@style/MyCustomTheme.NoActionBar" />
         <activity
-            android:screenOrientation="portrait"
             android:name=".SignupActivity"
             android:label="Get Token"
             android:parentActivityName=".MainActivity"
+            android:screenOrientation="portrait"
             android:theme="@style/MyCustomTheme" />
         <activity
-            android:screenOrientation="portrait"
             android:name=".ViewStatusActivity"
             android:label="Queue no."
             android:parentActivityName=".MainActivity"
+            android:screenOrientation="portrait"
             android:theme="@style/MyCustomTheme" />
 
         <receiver android:name=".BeaconFinder.ConnectBeaconListener">
@@ -57,16 +56,10 @@
             </intent-filter>
         </receiver>
 
-        <activity android:name=".StartingActivity"
+        <activity
+            android:name=".StartingActivity"
             android:screenOrientation="portrait"
-            android:theme="@style/MyCustomTheme.NoActionBar">
-            <intent-filter>
-
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-
-            </intent-filter>
-        </activity>
+            android:theme="@style/MyCustomTheme.NoActionBar" />
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
              (See the file "res/values/google_maps_api.xml").
@@ -80,10 +73,20 @@
             android:value="@string/google_maps_key" />
 
         <activity
-            android:screenOrientation="portrait"
             android:name=".MapsActivity"
-            android:label="@string/title_activity_maps"/>
+            android:label="@string/title_activity_maps"
+            android:screenOrientation="portrait" />
+        <activity android:name=".CategoryActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
 
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity android:name=".movies.OrderActivity" />
+        <activity android:name=".movies.MovieGenTokenActivity" />
+        <activity android:name=".movies.LoginActivity" />
+        <activity android:name=".movies.ViewStatusActivity"></activity>
     </application>
 
 </manifest>
