--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,4 +46,5 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.azoft.carousellayoutmanager:carousel:1.2.1'
     compile 'com.android.support:cardview-v7:25.2.0'
+    compile "com.android.support:percent:25.2.0"
 }
