feat: Adds order summary activity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -76,8 +76,8 @@
             android:name=".MapsActivity"
             android:label="@string/title_activity_maps"
             android:screenOrientation="portrait" />
-
-        <activity android:name=".CategoryActivity"
+        <activity
+            android:name=".CategoryActivity"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -85,17 +85,16 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-        <activity android:name=".movies.OrderActivity"
-            android:theme="@style/Theme.AppCompat.Light.NoActionBar"/>
-
-        <activity android:name=".movies.MovieGenTokenActivity" />
-
-        <activity android:name=".movies.LoginActivity"
-            android:theme="@style/Theme.AppCompat.Light.NoActionBar"/>
-
-        <activity android:name=".movies.ViewStatusActivity"></activity>
-
+        <activity
+            android:name=".movies.Activities.OrderActivity"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
+        <activity android:name=".movies.Activities.MovieGenTokenActivity" />
+        <activity
+            android:name=".movies.Activities.LoginActivity"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
+        <activity android:name=".movies.Activities.ViewStatusActivity" />
+        <activity android:name=".movies.Activities.OrderSummary"
+            android:label="Order Summary" />
     </application>
 
 </manifest>
