--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -94,7 +94,9 @@
             android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
         <activity android:name=".movies.Activities.ViewStatusActivity" />
         <activity android:name=".movies.Activities.OrderSummary"
-            android:label="Order Summary" />
+            android:theme="@style/MovieTheme"
+            android:label="Order Summary"
+            android:parentActivityName=".movies.Activities.OrderActivity"/>
     </application>
 
 </manifest>
