--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -81,14 +81,16 @@
             android:theme="@style/Theme.AppCompat.Light.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity
             android:name=".movies.Activities.OrderActivity"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
-        <activity android:name=".movies.Activities.ViewStatusActivity" />
+        <activity android:name=".movies.Activities.ViewStatusActivity"
+            android:theme="@style/MovieTheme"
+            android:label="Your Order"
+            android:parentActivityName=".movies.Activities.OrderSummary"/>
         <activity android:name=".movies.Activities.OrderSummary"
             android:theme="@style/MovieTheme"
             android:label="Order Summary"
